tooling/nargo_cli/tests/snapshots/execution_success/regression_8519/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: Field) -> pub u128 {
    let c: Field = -a;
    let c: u128 = c as u128;
    assert(c == 53438638232309528388129535304893203149);
    c
}
