tooling/nargo_cli/tests/snapshots/execution_success/regression_8519/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[regression_8519] Circuit output: 53438638232309528388129535304893203149
